# ghost

./: .gitignore  .travis.yml  com.github.hezral.ghosts.json  com.github.hezral.ghosts.yml  meson.build  python3-modules.json
data/: com.github.hezral.ghosts.appdata.xml.in  com.github.hezral.ghosts.desktop.in  com.github.hezral.ghosts.gschema.xml  meson.build
debian/: changelog  control  copyright  files  rules
po/: POTFILES  meson.build
src/: com.github.hezral.ghosts.in  com_github_hezral_ghosts.gresource.xml  ghosts.in  main.py  meson.build  window.py  window.ui
